# readthedocs

./: .readthedocs.yaml  README.md  README.rst  lumache.py  pyproject.toml
docs/source/: api.rst  index.rst
docs/source/tutorials/: Implementing SAKURA.rst  batchcorrection.rst  implementing.rst  tutorial_index.rst
sakura/: __init__.py  sakuraAE.py
