[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sakura"
authors = [
    {name="Zhenghao ZHANG", email="adamzhang@me.com"},
    {name="Jiamin CHEN", email="vitochanjm@gmail.com"},
    {name="Haoran WU", email="haoran@link.cuhk.edu.hk"},]
dynamic = ["version", "description"]
